[package]
name = "expire_retry_map"
version = "0.0.1"
edition = "2021"
authors = ["gcxfd <i@rmw.link>"]
license = "Apache-2.0"
description = ""
repository = "https://github.com/rmw-lib/expire_retry_map"
readme = "README.md"
keywords = ["expire_retry_map"]

[dependencies]
atomic-traits = "0.3.0"
num-traits = "0.2.15"
parking_lot = "0.12.1"

[dev-dependencies]
anyhow = "1.0.58"
criterion = "0.3.6"
rand = "0.8.5"

[profile.bench]
lto = true

[[bench]]
name = "main"
harness = false
# [[bin]]
# bench = false
# path = "src/main.rs"
# name = "expire_retry_map"
# [profile.release]
# lto = true
# codegen-units = 1
# debug-assertions = false
# overflow-checks = false
# opt-level = 3
# panic = 'abort'
